--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark  fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">Princess Lauratu Collage</a>
+            <a class="navbar-brand fw-bold" href="#"><i class="bi bi-book mx-2"></i> Princess Lauratu Collage</a>
             <button class="navbar-toggler" type="button"
              data-bs-toggle="collapse" 
              data-bs-target="#navbarNav" aria-controls="navbarNav" 
@@ -52,182 +52,53 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">About Us</h2>
-            <div class="row justify-content-center">
-                <!-- <div class="col-md-6">
-                    <img src="images/logo.jpeg" class="img-fluid rounded" alt="Students on campus">
-                </div> -->
-                <div class="col-md-12" style="text-align: justify;">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro, obcaecati odio quas error aperiam sed ullam, dicta sequi magnam provident perspiciatis culpa esse non saepe. Corporis culpa optio officia nesciunt rerum in temporibus voluptatibus dolorem quod harum voluptas eum quas rem qui asperiores aliquid eaque, inventore, ab nisi! Magni iste, iusto unde provident corporis vel animi inventore id ipsa deleniti tenetur, saepe, ut harum sint voluptates labore odio eligendi consectetur commodi deserunt veniam iure. Nemo cumque ratione unde dicta.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro, obcaecati odio quas error aperiam sed ullam, dicta sequi magnam provident perspiciatis culpa esse non saepe. Corporis culpa optio officia nesciunt rerum in temporibus voluptatibus dolorem quod harum voluptas eum quas rem qui asperiores aliquid eaque, inventore, ab nisi! Magni iste, iusto unde provident corporis vel animi inventore id ipsa deleniti tenetur, saepe, ut harum sint voluptates labore odio eligendi consectetur commodi deserunt veniam iure. Nemo cumque ratione unde dicta.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro, obcaecati odio quas error aperiam sed ullam, dicta sequi magnam provident perspiciatis culpa esse non saepe. Corporis culpa optio officia nesciunt rerum in temporibus voluptatibus dolorem quod harum voluptas eum quas rem qui asperiores aliquid eaque, inventore, ab nisi! Magni iste, iusto unde provident corporis vel animi inventore id ipsa deleniti tenetur, saepe, ut harum sint voluptates labore odio eligendi consectetur commodi deserunt veniam iure. Nemo cumque ratione unde dicta.
-                    </p>
-                    <ul>
-                        <li>Founded in 1980</li>
-                        <li>Over 10,000 alumni worldwide</li>
-                        <li>Accredited programs in various fields</li>
-                    </ul>
-                    <!-- <a href="#" class="btn btn-outline-primary">Learn More</a> -->
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-<!-- Programs Section -->
-<section id="programs" class="py-5 bg-light">
+   <!-- About Section -->
+<section id="about" class="py-5">
     <div class="container">
-        <h2 class="text-center mb-4">Our Programs</h2>
-        <div class="accordion" id="programsAccordion">
-            <!-- Program 1: Engineering -->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingEngineering">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEngineering" aria-expanded="true" aria-controls="collapseEngineering">
-                        <i class="bi bi-gear-fill me-2"></i> Engineering
-                    </button>
-                </h2>
-                <div id="collapseEngineering" class="accordion-collapse collapse show" aria-labelledby="headingEngineering" data-bs-parent="#programsAccordion">
-                    <div class="accordion-body row p-3">
-                        <div class="col-md-4 mb-4">
-                            <div class="card h-100 p-2">
-                                <i class="bi bi-unlock2-fill card-img-top"></i>
-                                <div class="card-body">
-                                    <h5 class="card-title">Engineering</h5>
-                                    <p class="card-text">Cutting-edge programs in mechanical, electrical, and civil engineering.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-4">
-                            <div class="card h-100 p-2">
-                                <i class="bi bi-unlock2-fill card-img-top"></i>
-                                <div class="card-body">
-                                    <h5 class="card-title">Engineering</h5>
-                                    <p class="card-text">Cutting-edge programs in mechanical, electrical, and civil engineering.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-4">
-                            <div class="card h-100 p-2">
-                                <i class="bi bi-unlock2-fill card-img-top"></i>
-                                <div class="card-body">
-                                    <h5 class="card-title">Engineering</h5>
-                                    <p class="card-text">Cutting-edge programs in mechanical, electrical, and civil engineering.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    
-                </div>
-            </div>
-            <!-- Program 2: Business -->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingBusiness">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBusiness" aria-expanded="false" aria-controls="collapseBusiness">
-                        <i class="bi bi-briefcase-fill me-2"></i> Business
-                    </button>
-                </h2>
-                <div id="collapseBusiness" class="accordion-collapse collapse" aria-labelledby="headingBusiness" data-bs-parent="#programsAccordion">
-                    <div class="accordion-body row p-3">
-                        <div class="col-md-4 mb-4">
-                            <div class="card h-100 p-2">
-                                <i class="bi bi-unlock2-fill card-img-top"></i>
-                                <div class="card-body">
-                                    <h5 class="card-title">Engineering</h5>
-                                    <p class="card-text">Cutting-edge programs in mechanical, electrical, and civil engineering.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-4">
-                            <div class="card h-100 p-2">
-                                <i class="bi bi-unlock2-fill card-img-top"></i>
-                                <div class="card-body">
-                                    <h5 class="card-title">Engineering</h5>
-                                    <p class="card-text">Cutting-edge programs in mechanical, electrical, and civil engineering.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-4">
-                            <div class="card h-100 p-2">
-                                <i class="bi bi-unlock2-fill card-img-top"></i>
-                                <div class="card-body">
-                                    <h5 class="card-title">Engineering</h5>
-                                    <p class="card-text">Cutting-edge programs in mechanical, electrical, and civil engineering.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
-            <!-- Program 3: Arts & Humanities -->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingArts">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseArts" aria-expanded="false" aria-controls="collapseArts">
-                        <i class="bi bi-brush-fill me-2"></i> Arts & Humanities
-                    </button>
-                </h2>
-                <div id="collapseArts" class="accordion-collapse collapse" aria-labelledby="headingArts" data-bs-parent="#programsAccordion">
-                    <div class="accordion-body">
-                        <img src="images/arts.jpg" class="img-fluid rounded mb-3" alt="Arts" style="max-height: 200px; object-fit: cover;">
-                        <p>Explore literature, history, and creative arts through our diverse and enriching programs.</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Program 4: Computer Science -->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingComputerScience">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseComputerScience" aria-expanded="false" aria-controls="collapseComputerScience">
-                        <i class="bi bi-code-slash me-2"></i> Computer Science
-                    </button>
-                </h2>
-                <div id="collapseComputerScience" class="accordion-collapse collapse" aria-labelledby="headingComputerScience" data-bs-parent="#programsAccordion">
-                    <div class="accordion-body">
-                        <img src="images/computer-science.jpg" class="img-fluid rounded mb-3" alt="Computer Science" style="max-height: 200px; object-fit: cover;">
-                        <p>Master programming, AI, and cybersecurity with our industry-aligned computer science programs.</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Program 5: Health Sciences -->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingHealthSciences">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseHealthSciences" aria-expanded="false" aria-controls="collapseHealthSciences">
-                        <i class="bi bi-heart-pulse-fill me-2"></i> Health Sciences
-                    </button>
-                </h2>
-                <div id="collapseHealthSciences" class="accordion-collapse collapse" aria-labelledby="headingHealthSciences" data-bs-parent="#programsAccordion">
-                    <div class="accordion-body">
-                        <img src="images/health-sciences.jpg" class="img-fluid rounded mb-3" alt="Health Sciences" style="max-height: 200px; object-fit: cover;">
-                        <p>Prepare for a rewarding career in nursing, pharmacy, or medical technology.</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Program 6: Environmental Studies -->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingEnvironmentalStudies">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEnvironmentalStudies" aria-expanded="false" aria-controls="collapseEnvironmentalStudies">
-                        <i class="bi bi-tree-fill me-2"></i> Environmental Studies
-                    </button>
-                </h2>
-                <div id="collapseEnvironmentalStudies" class="accordion-collapse collapse" aria-labelledby="headingEnvironmentalStudies" data-bs-parent="#programsAccordion">
-                    <div class="accordion-body">
-                        <img src="images/environmental-studies.jpg" class="img-fluid rounded mb-3" alt="Environmental Studies" style="max-height: 200px; object-fit: cover;">
-                        <p>Study sustainability, conservation, and environmental policy to address global challenges.</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Learn More</a>
-                    </div>
-                </div>
+        <h2 class="text-center mb-4">About Us</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-12" style="text-align: justify;">
+                <!-- Shortened Text (Visible Initially) -->
+                <p id="aboutShortText">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro...
+                </p>
+                <!-- Full Text (Hidden Initially) -->
+                <p id="aboutFullText" style="display: none;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro, obcaecati odio quas error aperiam sed ullam, dicta sequi magnam provident perspiciatis culpa esse non saepe. Corporis culpa optio officia nesciunt rerum in temporibus voluptatibus dolorem quod harum voluptas eum quas rem qui asperiores aliquid eaque, inventore, ab nisi! Magni iste, iusto unde provident corporis vel animi inventore id ipsa deleniti tenetur, saepe, ut harum sint voluptates labore odio eligendi consectetur commodi deserunt veniam iure. Nemo cumque ratione unde dicta.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro, obcaecati odio quas error aperiam sed ullam, dicta sequi magnam provident perspiciatis culpa esse non saepe. Corporis culpa optio officia nesciunt rerum in temporibus voluptatibus dolorem quod harum voluptas eum quas rem qui asperiores aliquid eaque, inventore, ab nisi! Magni iste, iusto unde provident corporis vel animi inventore id ipsa deleniti tenetur, saepe, ut harum sint voluptates labore odio eligendi consectetur commodi deserunt veniam iure. Nemo cumque ratione unde dicta.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro, obcaecati odio quas error aperiam sed ullam, dicta sequi magnam provident perspiciatis culpa esse non saepe. Corporis culpa optio officia nesciunt rerum in temporibus voluptatibus dolorem quod harum voluptas eum quas rem qui asperiores aliquid eaque, inventore, ab nisi! Magni iste, iusto unde provident corporis vel animi inventore id ipsa deleniti tenetur, saepe, ut harum sint voluptates labore odio eligendi consectetur commodi deserunt veniam iure. Nemo cumque ratione unde dicta.
+                </p>
+                <ul class="mt-3">
+                    <li>Founded in 1980</li>
+                    <li>Over 10,000 alumni worldwide</li>
+                    <li>Accredited programs in various fields</li>
+                </ul>
+                <!-- Read More/Less Buttons -->
+               <div class="text-end">
+                 <button id="readMoreBtn" class="btn btn-outline-success mt-3">Read More</button>
+                <button id="readLessBtn" class="btn btn-outline-success mt-3" style="display: none;">Read Less</button>
+               </div>
             </div>
         </div>
     </div>
 </section>
+    <!-- Programs Section -->
+    <section id="programs" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">Our Programs</h2>
+            <!-- distance learning -->
+            <h4 class="text-start mb-4">Distance Learning</h4>
+            <div class="accordion" id="DistanceprogramsAccordion">
+                <!-- Accordion items will be dynamically inserted here by JavaScript -->
+            </div>
+
+            <!-- Diploma -->
+            <h4 class="text-start my-4">Diploma</h4>
+            <div class="accordion" id="DiplomaprogramsAccordion">
+                <!-- Accordion items will be dynamically inserted here by JavaScript -->
+            </div>
+        </div>
+    </section>
     <!-- Testimonials Section -->
     <!-- <section id="testimonials" class="py-5">
         <div class="container">
@@ -304,7 +175,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
-            <p>&copy; 2025 Sunrise College. All Rights Reserved.</p>
+            <p>&copy; 2025 Princess Lauratu College. All Rights Reserved.</p>
             <p>Develope By Sulaiman Saleh Yahaya(08104343917)</p>
             
         </div>
