update accordion and add new programs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark  fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#"><i class="bi bi-book mx-2"></i> Princess Lauratu Collage</a>
+            <a class="navbar-brand fw-bold" href="#"><i class="bi bi-book mx-2"></i> Princess Lauratu College</a>
             <button class="navbar-toggler" type="button"
              data-bs-toggle="collapse" 
              data-bs-target="#navbarNav" aria-controls="navbarNav" 
@@ -86,15 +86,21 @@
     <section id="programs" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-4">Our Programs</h2>
-            <!-- distance learning -->
-            <h4 class="text-start mb-4">Distance Learning</h4>
-            <div class="accordion" id="DistanceprogramsAccordion">
-                <!-- Accordion items will be dynamically inserted here by JavaScript -->
-            </div>
-
+            
             <!-- Diploma -->
             <h4 class="text-start my-4">Diploma</h4>
             <div class="accordion" id="DiplomaprogramsAccordion">
+                <!-- Accordion items will be dynamically inserted here by JavaScript -->
+            </div>
+            <!-- Diploma -->
+            <h4 class="text-start my-4">Higher National Diploma (HND)</h4>
+            <div class="accordion" id="HNDprogramsAccordion">
+                <!-- Accordion items will be dynamically inserted here by JavaScript -->
+            </div>
+
+            <!-- distance learning -->
+            <h4 class="text-start mb-4">Distance Learning(Bachelor's)</h4>
+            <div class="accordion" id="DistanceprogramsAccordion">
                 <!-- Accordion items will be dynamically inserted here by JavaScript -->
             </div>
         </div>
