--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark  fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#"><i class="bi bi-book mx-2"></i> Princess Lauratu College</a>
+            <a class="navbar-brand fw-bold" href="#"><i class="bi bi-book "></i> Princess Lauratu College</a>
             <button class="navbar-toggler" type="button"
              data-bs-toggle="collapse" 
              data-bs-target="#navbarNav" aria-controls="navbarNav" 
@@ -98,9 +98,15 @@
                 <!-- Accordion items will be dynamically inserted here by JavaScript -->
             </div>
 
-            <!-- distance learning -->
-            <h4 class="text-start mb-4">Distance Learning(Bachelor's)</h4>
+            <!-- distance learning Degree-->
+            <h4 class="text-start my-4">Distance Learning(Bachelor's)</h4>
             <div class="accordion" id="DistanceprogramsAccordion">
+                <!-- Accordion items will be dynamically inserted here by JavaScript -->
+            </div>
+            
+            <!-- distance learning Masters-->
+            <h4 class="text-start my-4">Distance Learning(Postgraduate)</h4>
+            <div class="accordion" id="MastersprogramsAccordion">
                 <!-- Accordion items will be dynamically inserted here by JavaScript -->
             </div>
         </div>
