--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
             <div class="col-md-12" style="text-align: justify;">
                 <!-- Shortened Text (Visible Initially) -->
                 <p id="aboutShortText">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro...
+                  Princess Lauratu College is a forward-thinking institution committed to excellence in health sciences and management education.With a strong foundation built on innovation, academic rigor, and community impact, we empower students through high-quality instruction, hands-on training, and a supportive learning environment...
                 </p>
                 <!-- Full Text (Hidden Initially) -->
                 <p id="aboutFullText" style="display: none;">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro, obcaecati odio quas error aperiam sed ullam, dicta sequi magnam provident perspiciatis culpa esse non saepe. Corporis culpa optio officia nesciunt rerum in temporibus voluptatibus dolorem quod harum voluptas eum quas rem qui asperiores aliquid eaque, inventore, ab nisi! Magni iste, iusto unde provident corporis vel animi inventore id ipsa deleniti tenetur, saepe, ut harum sint voluptates labore odio eligendi consectetur commodi deserunt veniam iure. Nemo cumque ratione unde dicta.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro, obcaecati odio quas error aperiam sed ullam, dicta sequi magnam provident perspiciatis culpa esse non saepe. Corporis culpa optio officia nesciunt rerum in temporibus voluptatibus dolorem quod harum voluptas eum quas rem qui asperiores aliquid eaque, inventore, ab nisi! Magni iste, iusto unde provident corporis vel animi inventore id ipsa deleniti tenetur, saepe, ut harum sint voluptates labore odio eligendi consectetur commodi deserunt veniam iure. Nemo cumque ratione unde dicta.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis corrupti maxime, sequi cupiditate temporibus, voluptates cumque laboriosam, quidem aut suscipit. Magni libero odit numquam iusto consequuntur eaque quibusdam porro, obcaecati odio quas error aperiam sed ullam, dicta sequi magnam provident perspiciatis culpa esse non saepe. Corporis culpa optio officia nesciunt rerum in temporibus voluptatibus dolorem quod harum voluptas eum quas rem qui asperiores aliquid eaque, inventore, ab nisi! Magni iste, iusto unde provident corporis vel animi inventore id ipsa deleniti tenetur, saepe, ut harum sint voluptates labore odio eligendi consectetur commodi deserunt veniam iure. Nemo cumque ratione unde dicta.
+                    Princess Lauratu College is a forward-thinking institution committed to excellence in health sciences and management education. With a strong foundation built on innovation, academic rigor, and community impact, we empower students through high-quality instruction, hands-on training, and a supportive learning environment. Our programs are designed to prepare graduates for successful, meaningful careers in healthcare and leadership equipped not just with knowledge, but with the compassion and competence to make a lasting difference in their communities.
+
+                    We pride ourselves on offering flexible learning options, including distance learning Bachelor’s degree programs that typically do not require the Joint Admissions and Matriculation Board (JAMB) examination. This approach ensures greater access to higher education for aspiring professionals across diverse backgrounds.
+
+                    At Princess Lauratu College, we are more than an academic institution we are a catalyst for personal growth, professional excellence, and positive societal change.
                 </p>
                 <ul class="mt-3">
-                    <li>Founded in 1980</li>
-                    <li>Over 10,000 alumni worldwide</li>
-                    <li>Accredited programs in various fields</li>
+                    <li>Founded in 2023</li>
                 </ul>
                 <!-- Read More/Less Buttons -->
                <div class="text-end">
@@ -156,15 +156,15 @@
                     <ul class="list-unstyled">
                         <li class="mb-3">
                             <i class="bi bi-geo-alt-fill me-2"></i>
-                            123 College Avenue, Sunrise City, SC 12345
+                            NITT Kumo Along Gombe Yola road Po,box 304 Kumo Gombe state
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-telephone-fill me-2"></i>
-                            <a href="tel:+1234567890" class="text-decoration-none text-primary">+1 (234) 567-890</a>
+                            <a href="tel:+1234567890" class="text-decoration-none text-primary">08039156665, 08031196080</a>
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-envelope-fill me-2"></i>
-                            <a href="mailto:info@sunrisecollege.edu" class="text-decoration-none text-primary">info@sunrisecollege.edu</a>
+                            <a href="mailto:princesslauratu137@gmail.com" class="text-decoration-none text-primary">princesslauratu137@gmail.com</a>
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-clock-fill me-2"></i>
@@ -188,7 +188,7 @@
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
             <p>&copy; 2025 Princess Lauratu College. All Rights Reserved.</p>
-            <p>Develope By Sulaiman Saleh Yahaya(08104343917)</p>
+            <p>Develop By Sulaiman Saleh Yahaya(08104343917)</p>
             
         </div>
     </footer>
