--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                     We pride ourselves on offering flexible learning options, including distance learning Bachelor’s degree programs that typically do not require the Joint Admissions and Matriculation Board (JAMB) examination. This approach ensures greater access to higher education for aspiring professionals across diverse backgrounds.
 
                     At Princess Lauratu College, we are more than an academic institution we are a catalyst for personal growth, professional excellence, and positive societal change.
+                    <br/><br/>
+                    <span class="h4 ">Our Mission</span><br>
+                    Our mission is to inspires all learners to recognize their potential and achieve their goals through the delivery of high-quality academic instruction, programs, and support services. The college fosters equity and economic mobility by providing the environment to think critically, communicate effectively, and develop leadership skills to support our diverse communities.
+                    <br/><br/>
+                    <span class="h4 ">Our Vision</span><br>
+                    To be a leading institution in health education, research, and practice, fostering innovation, excellence, and collaboration in the pursuit of improved health outcome.
                 </p>
                 <ul class="mt-3">
                     <li>Founded in 2023</li>
@@ -168,7 +174,7 @@
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-clock-fill me-2"></i>
-                            Mon-Fri: 9:00 AM - 5:00 PM
+                            Monday to Saturday
                         </li>
                     </ul>
                     <h4 class="mt-4 mb-3">Follow Us</h4>
