add new meta tags for SEO and update Nav close when clicked

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- for SEO -->
+    <meta name="description" content="Princess Lauratu College is a leading private college in Gombe State, Nigeria, offering accredited diploma and certificate programs with a focus on career readiness and academic excellence.">
+    <meta name="keywords" content="Princess Lauratu College, Gombe State College, Accredited College Nigeria, Diploma Programs, Certificate Courses, Private College Gombe, Higher Education Nigeria, Nigerian College, Vocational Education">
+
+    <meta name="author" content="Princess Lauratu College">
     <title>Princess Lauratu College - Welcome</title>
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
