add link tag for icon in head

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="css/bootstrap-icons.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/logo.jpeg" sizes="16x16" type="image/jpeg">
 </head>
 <body>
     <!-- Navigation Bar -->
