update title in head

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Princess Lauratu College, Gombe State College, Accredited College Nigeria, Diploma Programs, Certificate Courses, Private College Gombe, Higher Education Nigeria, Nigerian College, Vocational Education">
 
     <meta name="author" content="Princess Lauratu College">
-    <title>Princess Lauratu College - Welcome</title>
+    <title>Princess Lauratu College</title>
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-icons.min.css" rel="stylesheet">
