--- a/index.html
+++ b/index.html
@@ -94,6 +94,53 @@
         </div>
     </div>
 </section>
+<!-- Carousel Section -->
+<section id="carousel" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center mb-4">Explore Princess Lauratu College</h2>
+        <div id="collegeCarousel" class="carousel slide" data-bs-ride="carousel">
+            <!-- Indicators -->
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#collegeCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#collegeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#collegeCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <!-- Slides -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/host1.jpeg" class="d-block w-100 rounded" alt="Campus view" style="height: 500px; object-fit: cover;">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="fw-bold">Vibrant Campus Life</h3>
+                        <p>Discover our state-of-the-art facilities and welcoming community.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/excel2.jpeg" class="d-block w-100 rounded" alt="Students studying" style="height: 500px; object-fit: cover;">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="fw-bold">Academic Excellence</h3>
+                        <p>Join a diverse group of learners in our accredited programs.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/camlife.jpeg" class="d-block w-100 rounded" alt="College event" style="height: 500px; object-fit: cover;">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="fw-bold">Engaging Events</h3>
+                        <p>Participate in cultural and academic events that enrich your experience.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Controls -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#collegeCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#collegeCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+</section>
     <!-- Programs Section -->
     <section id="programs" class="py-5 bg-light">
         <div class="container">
