update contact us and hero section

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
     <!-- Hero Section -->
     <section id="home" class="hero-section text-white text-center d-flex align-items-center" style="background-image: url('images/logo.jpeg');">
         <div class="container">
-            <h1 class="display-4 fw-bold">Welcome to Princess Lauratu Advance College Of Health</h1>
-            <p class="lead">Science and Technology Kumo</p>
+            <h1 class="display-4 fw-bold">
+                WELCOME TO PRINCESS LAURATU ADVANCE COLLEGE OF HEALTH SCIENCE AND TECHNOLOGY KUMO
+            </h1>
+            <!-- <p class="lead">Science and Technology Kumo</p> -->
             <!-- <a href="#contact" class="btn btn-primary btn-lg mt-3">Apply Now</a> -->
         </div>
     </section>
@@ -215,11 +217,11 @@
                     <ul class="list-unstyled">
                         <li class="mb-3">
                             <i class="bi bi-geo-alt-fill me-2"></i>
-                            NITT Kumo Along Gombe Yola road Po,box 304 Kumo Gombe state
+                           NITT Kumo Along Gombe to Yola Road P.O. Box: 304 Kumo, Gombe State
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-telephone-fill me-2"></i>
-                            <a href="tel:+1234567890" class="text-decoration-none text-primary">08039156665, 08031196080</a>
+                            <a href="tel:+1234567890" class="text-decoration-none text-primary">+2348039156665, +2348031196080</a>
                         </li>
                         <li class="mb-3">
                             <i class="bi bi-envelope-fill me-2"></i>
