update contact us and hero section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section id="home" class="hero-section text-white text-center d-flex align-items-center" style="background-image: url('images/logo.jpeg');">
         <div class="container">
             <h1 class="display-4 fw-bold">
-                WELCOME TO PRINCESS LAURATU ADVANCE COLLEGE OF HEALTH SCIENCE AND TECHNOLOGY KUMO
+                WELCOME TO PRINCESS LAURATU ADVANCED COLLEGE OF HEALTH SCIENCE AND TECHNOLOGY KUMO
             </h1>
             <!-- <p class="lead">Science and Technology Kumo</p> -->
             <!-- <a href="#contact" class="btn btn-primary btn-lg mt-3">Apply Now</a> -->
